--- a/src/components/products/Products.module.scss
+++ b/src/components/products/Products.module.scss
@@ -153,10 +153,14 @@
 
       .row {
         flex-direction: column;
+        padding: 20px;
 
         .item {
           width: 100%;
           height: max-content;
+          background-color: #fff;
+          box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+          border-radius: 5px;
 
           .img {
             img {
