--- a/src/components/slider/Slider.module.scss
+++ b/src/components/slider/Slider.module.scss
@@ -17,15 +17,20 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      width: 33%;
 
       div {
-        padding: 20px;
-        border-radius: 50%;
+        // width: 33%;
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.08);
 
         img {
-          width: 50px;
+          width: 100%;
+          height: 200px;
         }
+      }
+
+      .blur {
+        display: none;
       }
 
       h2 {
